--- a/PadariaDelicioPao/salgados.html
+++ b/PadariaDelicioPao/salgados.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="quemsomos.html">Quem somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Fale Conosco</a>
+                            <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
