--- a/PadariaDelicioPao/salgados.html
+++ b/PadariaDelicioPao/salgados.html
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pão de Queijo</h5>
                             <p class="card-text">Textura leve, feito com queijo e polvilho.</p>
-                            <a href="quibe.html" class="btn btn-outline-dark">Mais informações</a>
+                            <a href="paodequeijo.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
