--- a/PadariaDelicioPao/bolorecheado.html
+++ b/PadariaDelicioPao/bolorecheado.html
@@ -44,3 +44,57 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/bolo_recheado.jpg" alt="Bolos Recheados para Festa" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                </div>
+                <h1 class="cursive-text mb-4">Bolos Recheados para Festa</h1>
+                <p class="lead">Nossos bolos recheados são ideais para comemorações especiais, feitos com ingredientes selecionados e muito carinho!</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>Massas fofinhas combinadas com recheios cremosos e coberturas irresistíveis, perfeitas para aniversários e celebrações.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Sabores Disponíveis</h4>
+                            <p>Chocolate com brigadeiro, baunilha com doce de leite, morango com chantilly, coco com abacaxi e muito mais.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>A partir de R$ 59,90 (1kg).</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+    
+            <section class="text-center mt-5">
+                <a href="bolos.html" class="btn btn-outline-dark">Voltar para os Bolos</a>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Sobre Nós</h5>
+                        <p>Na Delicio Pão, oferecemos produtos artesanais frescos todos os dias. Nosso compromisso é com a qualidade e o sabor.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contato</h5>
+                        <p><strong>Endereço:</strong> Rua dos Sabores, 123, Centro</p>
+                        <p><strong>Telefone:</strong> (31) 1234-5678</p>
+                        <p><strong>Email:</strong> contato@deliciopao.com.br</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Horário de Funcionamento</h5>
+                        <p>Segunda a Sexta: 7h - 19h</p>
+                        <p>Sábado: 8h - 18h</p>
+                        <p>Domingo: 8h - 13h</p>
+                    </div>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
